# Chronos

./: CLAUDE.md  Cargo.toml  README.adoc  chronos-accessibility-engine.rs  chronos-build-system.rs  chronos-cas-engine.rs  chronos-database-engine.rs  chronos-distributed-engine.rs  chronos-dsp-engine.rs  chronos-financial-engine.rs  chronos-game-engine.rs  chronos-graph-engine(1).rs  chronos-hotreload-engine.rs  chronos-i18n-engine.rs  chronos-inference-ir-v2.rs  chronos-ir-codegen.rs  chronos-lexer-v2.rs  chronos-lexer.rs  chronos-os-engine.rs  chronos-parser-v2.rs  chronos-quantum-engine.rs  chronos-robotics-engine.rs  chronos-security-realtime.rs  chronos-simulation-datascience.rs  chronos-stdlib-types.rs  chronos-type-inference.rs  chronos-ui-engine.rs  chronos-unified-integration.rs
examples/: README.md  fibonacci.chr  hello.chr  structs.chr
src/compiler/: chronos-c-backend.rs  chronos-parser.rs  chronos-type-inference.rs
src/engines/: chronos-bioinformatics-engine.rs  chronos-blockchain-engine.rs  chronos-ffi-engine.rs  chronos-geospatial-engine.rs  chronos-graph-engine.rs  chronos-macro-engine.rs  chronos-multimedia-engine.rs  chronos-network-engine.rs  chronos-nlp-engine.rs  chronos-observability-engine.rs  chronos-proof-engine.rs
src/tooling/: chronos-documentation-system.rs  chronos-missing-features-1.rs  chronos-testing-framework.rs
tests/features/: 01_int_types.chr  02_float_types.chr  03_bool_type.chr  04_string_type.chr  05_arithmetic_ops.chr  06_comparison_ops.chr  07_logical_ops.chr  08_unary_ops.chr  09_compound_assign.chr  10_let_binding.chr  11_var_binding.chr  12_if_else.chr  13_while_loop.chr  14_break_continue.chr  15_functions_basic.chr  16_recursion.chr  17_forward_reference.chr  18_multiple_params.chr  19_structs_basic.chr  19_structs_decl.chr  20_impl_decl.chr  20_impl_methods.chr  21_type_alias.chr  22_nested_struct_decl.chr  22_nested_structs.chr  23_println_forms.chr  24_nested_calls.chr  25_require_assert.chr  26_return_void.chr  27_complex_expressions.chr  28_enum_parse.chr  29_match_parse.chr  30_for_loop_parse.chr  31_visibility_pub.chr  32_trait_parse.chr  33_lambda_parse.chr  (+1 more)
(+90 files in other folders)
